--- a/hackintosh/EFI 10.12.6 samsung ssd 960 working/CLOVER/config.plist
+++ b/hackintosh/EFI 10.12.6 samsung ssd 960 working/CLOVER/config.plist
@@ -99,7 +99,7 @@
 			</dict>
 		</array>
 		<key>HaltEnabler</key>
-		<false/>
+		<true/>
 		<key>SSDT</key>
 		<dict>
 			<key>DropOem</key>
@@ -111,7 +111,7 @@
 				<key>PStates</key>
 				<false/>
 				<key>PluginType</key>
-				<false/>
+				<true/>
 			</dict>
 		</dict>
 	</dict>
@@ -247,198 +247,294 @@
 		<key>KextsToPatch</key>
 		<array>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily IONameMatch</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>InfoPlistPatch</key>
-			    <true/>
-			    <key>Find</key>
-			    <data>PHN0cmluZz5wY2kxNDRkLGE4MDQ8L3N0cmluZz4=</data>
-			    <key>Replace</key>
-			    <data>PHN0cmluZz5wY2kxNDRkLGE4MDI8L3N0cmluZz4=</data>
+				<key>Comment</key>
+				<string>IONVMeFamily IONameMatch</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				PHN0cmluZz5wY2kxNDRkLGE4MDQ8L3N0cmluZz4=
+				</data>
+				<key>InfoPlistPatch</key>
+				<true/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				PHN0cmluZz5wY2kxNDRkLGE4MDI8L3N0cmluZz4=
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#1</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>ibPoAgAAweAMBQAQAACJgw==</data>
-			    <key>Replace</key>
-			    <data>ibPoAgAAweAJBQAQAACJgw==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#1</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				ibPoAgAAweAMBQAQAACJgw==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				ibPoAgAAweAJBQAQAACJgw==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#2</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>D7aMiIIAAACD+QwPhTIBAA==</data>
-			    <key>Replace</key>
-			    <data>D7aMiIIAAACD+QkPhTIBAA==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#2</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				D7aMiIIAAACD+QwPhTIBAA==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				D7aMiIIAAACD+QkPhTIBAA==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#3</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>AMeDpAAAAAAQAABIi0gISA==</data>
-			    <key>Replace</key>
-			    <data>AMeDpAAAAAACAABIi0gISA==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#3</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				AMeDpAAAAAAQAABIi0gISA==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				AMeDpAAAAAACAABIi0gISA==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#4</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>SYnGTYX2dGFBwecMSWP/vg==</data>
-			    <key>Replace</key>
-			    <data>SYnGTYX2dGFBwecJSWP/vg==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#4</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				SYnGTYX2dGFBwecMSWP/vg==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				SYnGTYX2dGFBwecJSWP/vg==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#5</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>hv8PAABIwegMD7cPgeH/Dw==</data>
-			    <key>Replace</key>
-			    <data>hv8PAABIwegJD7cPgeH/Dw==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#5</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				hv8PAABIwegMD7cPgeH/Dw==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				hv8PAABIwegJD7cPgeH/Dw==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#6_7</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>icGB4f8PAABIAdFIgfn/DwAAdzs=</data>
-			    <key>Replace</key>
-			    <data>icGB4f8BAABIAdFIgfn/AQAAdzs=</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#6_7</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				icGB4f8PAABIAdFIgfn/DwAAdzs=
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				icGB4f8BAABIAdFIgfn/AQAAdzs=
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#8</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>SYHF/w8AAEnB7QxJiwQkSA==</data>
-			    <key>Replace</key>
-			    <data>SYHF/w8AAEnB7QlJiwQkSA==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#8</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				SYHF/w8AAEnB7QxJiwQkSA==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				SYHF/w8AAEnB7QlJiwQkSA==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#9_10</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>BgIAAEyNuAAQAABMiflIgeEA8P//SYmGGgEAAEmJjiIBAABBvAAQAABJKfQ=</data>
-			    <key>Replace</key>
-			    <data>BgIAAEyNuAACAABMiflIgeEA8P//SYmGGgEAAEmJjiIBAABBvAACAABJKfQ=</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#9_10</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				BgIAAEyNuAAQAABMiflIgeEA8P//SYmGGgEAAEmJjiIB
+				AABBvAAQAABJKfQ=
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				BgIAAEyNuAACAABMiflIgeEA8P//SYmGGgEAAEmJjiIB
+				AABBvAACAABJKfQ=
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#11</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>AABJiY4iAQAAugAQAABIKQ==</data>
-			    <key>Replace</key>
-			    <data>AABJiY4iAQAAugACAABIKQ==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#11</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				AABJiY4iAQAAugAQAABIKQ==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				AABJiY4iAQAAugACAABIKQ==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#12</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>yAAAAEkp17gAEAAATYskJA==</data>
-			    <key>Replace</key>
-			    <data>yAAAAEkp17gAAgAATYskJA==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#12</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				yAAAAEkp17gAEAAATYskJA==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				yAAAAEkp17gAAgAATYskJA==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#13</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>4b+AQBUGTYnWugAQAABFMQ==</data>
-			    <key>Replace</key>
-			    <data>4b+AQBUGTYnWugACAABFMQ==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#13</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				4b+AQBUGTYnWugAQAABFMQ==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				4b+AQBUGTYnWugACAABFMQ==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#14</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>iWTY+EmBxAAQAABJgccA8A==</data>
-			    <key>Replace</key>
-			    <data>iWTY+EmBxAACAABJgccA8A==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#14</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				iWTY+EmBxAAQAABJgccA8A==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				iWTY+EmBxAACAABJgccA8A==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#15</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>Bf8PAABIwegMZvfB/w8PlQ==</data>
-			    <key>Replace</key>
-			    <data>Bf8PAABIwegJZvfB/w8PlQ==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#15</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				Bf8PAABIwegMZvfB/w8PlQ==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				Bf8PAABIwegJZvfB/w8PlQ==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#16</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>weIIQQ+2wcHgDEQJ0EQJwA==</data>
-			    <key>Replace</key>
-			    <data>weIIQQ+2wcHgCUQJ0EQJwA==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#16</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				weIIQQ+2wcHgDEQJ0EQJwA==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				weIIQQ+2wcHgCUQJ0EQJwA==
+				</data>
 			</dict>
 			<dict>
-			    <key>Comment</key>
-			    <string>IONVMeFamily Pike R. Alpha Patch#17</string>
-			    <key>Disabled</key>
-			    <false/>
-			    <key>Name</key>
-			    <string>IONVMeFamily</string>
-			    <key>Find</key>
-			    <data>RYTJD5XAD7bAweAMRAnYRA==</data>
-			    <key>Replace</key>
-			    <data>RYTJD5XAD7bAweAJRAnYRA==</data>
+				<key>Comment</key>
+				<string>IONVMeFamily Pike R. Alpha Patch#17</string>
+				<key>Disabled</key>
+				<false/>
+				<key>Find</key>
+				<data>
+				RYTJD5XAD7bAweAMRAnYRA==
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>IONVMeFamily</string>
+				<key>Replace</key>
+				<data>
+				RYTJD5XAD7bAweAJRAnYRA==
+				</data>
 			</dict>
 			<dict>
 				<key>Comment</key>
@@ -547,7 +643,9 @@
 		<key>MLB</key>
 		<string>C02032109R5DC771H</string>
 		<key>ROM</key>
-		<string>UseMacAddr0</string>
+		<data>
+		ICDlov26
+		</data>
 	</dict>
 	<key>SMBIOS</key>
 	<dict>
@@ -591,6 +689,8 @@
 		<string>iMac14,2</string>
 		<key>SerialNumber</key>
 		<string>D25P838WF8JC</string>
+		<key>SmUUID</key>
+		<string>2916BDF5-5B95-4C42-AB1F-C18B8EA2FDBA</string>
 		<key>Version</key>
 		<string>1.0</string>
 	</dict>
